[gd_scene load_steps=3 format=3 uid="uid://cx3qn0kp8aokt"]

[ext_resource type="Script" uid="uid://dtnaj1bsplgx5" path="res://leaderboard_ui.gd" id="1_suvbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_suvbt"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 250.0
offset_right = 50.0
offset_bottom = 250.0
grow_vertical = 2
script = ExtResource("1_suvbt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -360.0
offset_right = 400.0
offset_bottom = 40.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_suvbt")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸŽª TOP CLOWNS ðŸŽª"
horizontal_alignment = 1

[node name="LeaderboardContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "ðŸ”„"

[node name="LoadingLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
